[package]
name = "ext-rs-service-status"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
